@@ -31,10 +31,12 @@ return value from \function{what()}:
   \lineii{'tiff'}{TIFF Files}
   \lineii{'rast'}{Sun Raster Files}
   \lineii{'xbm'}{X Bitmap Files}
-  \lineii{'jpeg'}{JPEG data in JFIF format}
+  \lineii{'jpeg'}{JPEG data in JFIF or Exif formats}
   \lineii{'bmp'}{BMP files}
   \lineii{'png'}{Portable Network Graphics}
 \end{tableii}
+
+\versionadded[Exif detection]{2.5}
 
 You can extend the list of file types \module{imghdr} can recognize by
 appending to this variable:
